--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,20 @@
   animation: fadeIn 0.2s ease-in-out;
 }
 
+h1 {
+  font-family: "Inter", sans-serif;
+}
+
+h2 {
+  font-family: "Open Sans", sans-serif;
+}
+
+p,
+h3 {
+  font-family: "DM Sans", sans-serif;
+}
+
+/* 
 button:hover {
   filter: brightness(1.1);
   transition: filter 0.3ms;
@@ -52,4 +66,4 @@ button:active {
 .input-custom::placeholder {
   color: white;
   font-weight: lighter;
-}
+} */
